--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="form-container">
     <h2>Create Post</h2>
     <form method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
@@ -31,18 +32,10 @@
                 {% endfor %}
             {% endif %}
         </div>
-        <div class="mb-3">
-            {{ form.tags.label(class="form-label") }}
-            {{ form.tags(class="form-control") }}
-            {% if form.tags.errors %}
-                {% for error in form.tags.errors %}
-                    <div class="text-danger">{{ error }}</div>
-                {% endfor %}
-            {% endif %}
-        </div>
         <div class="buttons-container">
             {{ form.submit(class="btn btn-primary") }}
             <a href="{{ url_for('blog.home') }}" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
+</div>
 {% endblock %}
